test: disabled 테스트 구현