@@ -1,11 +1,6 @@
 package kitchenpos.fixture;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import kitchenpos.domain.Menu;
-import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
 
@@ -20,22 +15,7 @@ public class TableFixture {
 
     public static TableGroup createTableGroup(OrderTable... orderTables) {
         TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(Arrays.asList(orderTables));
+        tableGroup.setOrderTables(List.of(orderTables));
         return tableGroup;
-    }
-
-    public static Order createOrder(OrderTable orderTable, Menu... menus) {
-        List<OrderLineItem> orderLineItems = new ArrayList<>();
-        for (Menu menu : menus) {
-            OrderLineItem orderLineItem = new OrderLineItem();
-            orderLineItem.setMenuId(menu.getId());
-            orderLineItem.setQuantity(1);
-            orderLineItems.add(orderLineItem);
-        }
-
-        Order order = new Order();
-        order.setOrderLineItems(orderLineItems);
-        order.setOrderTableId(orderTable.getId());
-        return order;
     }
 }
